@@ -1,5 +1,11 @@
 2021-01-08  Timm Bäder  <tbaeder@redhat.com>
 
+	* arlib-argp.c (help_filter): Lift text_for_default function to...
+	(text_for_default): ... here. New file scope function taking text
+	as argument.
+
+2021-01-08  Timm Bäder  <tbaeder@redhat.com>
+
 	* addr2line.c (handle_address): Move show_note and show_int up to
 	file scope.
 	(show_note: New static inline function.
